--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Touch of Art",
+  "name": "Touches of Art",
   "description": "Display art pieces with a brieve description.",
   "version": "1.0",
   "manifest_version": 2,
