--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name":  "Touches of Art",
-  "description": "Display art pieces with a brieve description.",
+  "description": "Display images of art pieces as background of the new tab with a brieve description.",
   "version": "1.0",
   "manifest_version": 2,
-  "author": "Jedd Song",
+  "author": "JeddSJr",
 
   "action":{
     "default_icon":{
