Re-open project and restructure Imgs retrieval

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name":  "Touches of Art",
+  "name":  "Art by Art",
   "description": "Display images of art pieces as background of the new tab with a brieve description.",
   "version": "1.0",
   "manifest_version": 2,
