--- a/manifest.json
+++ b/manifest.json
@@ -4,25 +4,31 @@
   "version": "1.0",
   "manifest_version": 3,
   "author": "JeddSJr",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "Fixette@BackgrArt.com"
+    }
+  },
 
   "action":{
     "default_icon":{
       "16": "src/imgs/icons/icon_16.png",
-      "48": "src/imgs/icons/icon48.png",
+      "50": "src/imgs/icons/icon_50.png",
       "128": "src/imgs/icons/icon_picture_128_white.png"
     },
     "default_popup": "src/html/interface_popup.html"
   },
+
   "background": {
-    "service_worker": "src/js/background.js",
-    "type": "module"
+    "scripts": ["src/js/background.js"]
   },
+
   "chrome_url_overrides":{
     "newtab": "src/html/override_newtab.html"
   },
   "icons":{
     "16": "src/imgs/icons/icon_16.png",
-    "48": "src/imgs/icons/icon48.png",
+    "50": "src/imgs/icons/icon_50.png",
     "128": "src/imgs/icons/icon_picture_128_white.png"
   },
   "permissions": [
