better styling for topsites

--- a/manifest.json
+++ b/manifest.json
@@ -33,7 +33,14 @@
   "permissions": [
     "storage",
     "alarms",
-    "topSites"
+    "topSites",
+    "favicon"
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["_favicon/*"],
+      "matches": ["<all_urls>"],
+      "extension_ids": ["*"]
+    }
   ]
-
 }
